--- a/package.json
+++ b/package.json
@@ -30,16 +30,24 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.52.0",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.11.7",
-		"eslint": "^7.15.0",
-		"@typescript-eslint/eslint-plugin": "^4.9.0",
-		"@typescript-eslint/parser": "^4.9.0",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"typescript": "^4.1.2",
-		"vscode-test": "^1.4.1"
+		"@types/change-case": "^2.3.1",
+		"@types/js-yaml": "^3.12.1",
+		"@types/lodash": "^4.14.121",
+		"@types/mkdirp": "^0.5.2",
+		"@types/mocha": "^2.2.42",
+		"@types/node": "^12.7.8",
+		"@types/rimraf": "^2.0.2",
+		"@types/semver": "^6.0.2",
+		"@types/vscode": "^1.31.0",
+		"ts-loader": "^6.2.1",
+		"tslint": "^5.12.1",
+		"typescript": "^3.5.1",
+		"webpack": "^4.41.2",
+		"webpack-cli": "^3.3.10"
+	},
+	"dependencies": {
+		"change-case": "^3.1.0",
+		"lodash": "^4.17.19",
+		"mkdirp": "^0.5.1"
 	}
 }
