--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:riverpod-clean-architecture.helloWorld"
+		"onCommand:riverpod-clean-architecture.helloWorld",
+		"onCommand:extension.new-package"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "riverpod-clean-architecture.helloWorld",
-				"title": "Hello World"
+				"command": "extension.new-package",
+				"title": "Clean Riverpod: New Package"
 			}
 		]
 	},
+
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
