- Added Command access from right click on folder - Added folder structure for new package

--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
 				"command": "extension.new-package",
 				"title": "Clean Riverpod: New Package"
 			}
-		]
+		],
+		"menus": {
+			"explorer/context": [
+				{
+					"command": "extension.new-package",
+					"when": "explorerResourceIsFolder"
+				}
+			]
+		}
 	},
-
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
