--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
 	"displayName": "Flutter Clean Architecture",
 	"description": "An extension that will let you create a flutter project with a clean architecture setup",
 	"version": "0.0.1",
+	"publisher": "ElianOrtega",
+	"repository": {
+    "type": "git",
+    "url": "https://github.com/elian-ortega/clean-architecture-vscode"
+	},
+	"keywords": [
+    	"dart",
+    	"flutter",
+    	"cleanarchitecture",
+    	"riverpod"
+  ],
 	"engines": {
 		"vscode": "^1.52.0"
 	},
