--- a/package.json
+++ b/package.json
@@ -1,72 +1,72 @@
 {
-	"name": "flutter-clean-architecture",
-	"displayName": "Flutter Clean Architecture",
-	"description": "An extension that will let you create a flutter project with a clean architecture setup",
-	"version": "0.0.1",
-	"publisher": "ElianOrtega",
-	"repository": {
+  "name": "flutter-clean-scope",
+  "displayName": "Flutter Clean Scope",
+  "description": "An extension that will let you create a flutter project with a clean architecture setup",
+  "version": "0.0.1",
+  "publisher": "NoScopeDevs",
+  "repository": {
     "type": "git",
-    "url": "https://github.com/elian-ortega/clean-architecture-vscode"
-	},
-	"keywords": [
-    	"dart",
-    	"flutter",
-    	"cleanarchitecture",
-    	"riverpod"
+    "url": "https://github.com/NoScopeDevs/flutter-clean-scope-vs-extension"
+  },
+  "keywords": [
+    "dart",
+    "flutter",
+    "cleanarchitecture",
+    "riverpod"
   ],
-	"engines": {
-		"vscode": "^1.52.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:extension.new-package"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "extension.new-package",
-				"title": "Clean Flutter: New Package"
-			}
-		],
-		"menus": {
-			"explorer/context": [
-				{
-					"command": "extension.new-package",
-					"when": "explorerResourceIsFolder"
-				}
-			]
-		}
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/change-case": "^2.3.1",
-		"@types/js-yaml": "^3.12.1",
-		"@types/lodash": "^4.14.121",
-		"@types/mkdirp": "^0.5.2",
-		"@types/mocha": "^2.2.42",
-		"@types/node": "^12.7.8",
-		"@types/rimraf": "^2.0.2",
-		"@types/semver": "^6.0.2",
-		"@types/vscode": "^1.31.0",
-		"ts-loader": "^6.2.1",
-		"tslint": "^5.12.1",
-		"typescript": "^3.5.1",
-		"webpack": "^4.41.2",
-		"webpack-cli": "^3.3.10"
-	},
-	"dependencies": {
-		"change-case": "^3.1.0",
-		"lodash": "^4.17.19",
-		"mkdirp": "^0.5.1"
-	}
+  "engines": {
+    "vscode": "^1.52.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:extension.new-package"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "extension.new-package",
+        "title": "Clean Scope: New Package"
+      }
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "extension.new-package",
+          "when": "explorerResourceIsFolder"
+        }
+      ]
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/change-case": "^2.3.1",
+    "@types/js-yaml": "^3.12.1",
+    "@types/lodash": "^4.14.121",
+    "@types/mkdirp": "^0.5.2",
+    "@types/mocha": "^2.2.42",
+    "@types/node": "^12.7.8",
+    "@types/rimraf": "^2.0.2",
+    "@types/semver": "^6.0.2",
+    "@types/vscode": "^1.31.0",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.12.1",
+    "typescript": "^3.5.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "change-case": "^3.1.0",
+    "lodash": "^4.17.19",
+    "mkdirp": "^0.5.1"
+  }
 }
